# blackforge

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  Makefile  PROGRESS.md  README.md  pyproject.toml  项目实施规划.md
benchmarks/: __init__.py  _diag_beta_determinism.py  _diag_beta_v2.py  _diag_cg_variants2.py  _diag_cudagraph_variants.py  _diag_graph_parity.py  _diag_warm_suffix.py  _diag_wrapper_isolate.py  _diag_wrapper_parity.py  a1a_gdn_profile.py  a2_autotune.py  a2_backend_sweep.py  a2_custom_kernel_bench.py  a2_e2e_ab_test.py  a2_gemm_microbench.py  a2_gemm_shape_profile.py  a2_gemm_shape_survey.py  a2_laguna_shape_verify.py  a2_multi_backend_bench.py  a2_native_baseline.py  b1_d1_gpu_verify.py  baseline_compare.py  batch_decode_regression.py  batch_decode_signal_probe.py  capacity_w1w2_check.py  comprehensive_bench.py  cudagraph_decode_regression.py  cudagraph_decode_sanitizer_repro.py  cudagraph_eager_parity_check.py  cudagraph_mtp_regression.py  cudagraph_sanitizer_micro.py  d1_decode_round_kvlen_diag.py  d1_prefill_shape_nsys_diag.py  decode_step_profile.py  diag_acceptance.py  diag_acceptance_long.py  diag_acceptance_trace.py  diag_acceptance_v2.py  diag_cg_aux_drift.py  diag_cg_stage_compare.py  (+86 more)
docs/: architecture.md  roadmap.md
kernels/: README.md  nvfp4_gemm_triton.py
loader/: README.md  __init__.py  checkpoint_index.py  inspect_checkpoint.py  pack_manifest.py  safetensors_header.py  tensor_reader.py
model/: README.md  __init__.py  qwen36_config.py
notes/: 2026-07-17-post-ragged-round-next-steps.md  2026-07-18-session-review-and-next-steps.md  2026-07-19-comprehensive-audit-and-forward-plan.md  2026-07-19-p3-implementation-plan.md  2026-07-19-prefix-cache-p2-codex-handoff.md  2026-07-20-cold-prefill-allocation-sensitivity-investigation.md  2026-07-20-cold-prefill-rootcause-plan.md  2026-07-20-comprehensive-optimization-plan.md  2026-07-20-evidence-based-optimization-plan.md  2026-07-20-inv8-chunked-hit-prefill-plan.md  2026-07-20-kernel-optimization-plan.md  2026-07-21-kernel-comprehensive-review.md  2026-07-22-a1a-gdn-profiling.md  2026-07-22-a2-gemm-autotune-investigation.md  2026-07-22-a3-mtp-fusion-analysis.md  2026-07-22-a6-attention-split-k-investigation.md  2026-07-22-laguna-l0-dflash-verification.md  2026-07-22-laguna-l0-memory-budget.md  2026-07-22-quality-baseline-and-official-scores.md  2026-07-22-quality-review.md  2026-07-22-vllm-fork-archive.md  2026-07-22-vllm-fork-diff.patch  2026-07-23-a2-gemm-baseline-and-cudnn-findings.md  2026-07-23-a3-nsys-conclusion.md  2026-07-23-cudagraph-determinism.md  2026-07-23-cutlass-fp4-moe-fusion-design.md  2026-07-23-e1-model-abstraction-design.md  2026-07-23-gpu-verification-checklist.md  2026-07-23-laguna-bos-root-cause.md  2026-07-23-laguna-moe-b12x-direct-kernel.md  2026-07-23-laguna-moe-node-trace.md  2026-07-23-laguna-server-integration-plan.md  2026-07-23-swa-ring-kv-investigation.md  (+18 more)
(+165 files in other folders)
