[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "qwen-sm120-runtime"
version = "0.1.0"
description = "Specialized single-GPU runtime for Qwen3.6 NVFP4 on SM120."
requires-python = ">=3.10"

[project.optional-dependencies]
cuda = ["numpy>=2,<3", "safetensors>=0.6.2", "torch==2.11.0"]
dev = ["pytest>=8", "ruff>=0.8"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.setuptools.packages.find]
include = ["benchmarks*", "loader*", "model*", "oracle*", "runtime*", "server*"]
