[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "blackforge"
version = "0.1.0"
description = "Hand-forged CUDA inference engine for Blackwell (SM120) GPUs — custom attention kernels, FP8 KV cache, MTP speculative decoding, 256K context."
requires-python = ">=3.10"

[project.optional-dependencies]
cuda = ["numpy>=2,<3", "safetensors>=0.6.2", "torch==2.11.0"]
dev = ["pytest>=8", "ruff>=0.8"]
serving = ["requests>=2.31", "transformers>=4.45", "fastapi>=0.110", "uvicorn>=0.29", "httpx>=0.27"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
# benchmarks/ holds diagnostic microbench/probe/repro scripts that
# deliberately use compact one-liners and scratch variables. Keep the
# bug-catching rules active (F821 undefined-name, F811 redefinition,
# F401 unused-import, E9xx syntax) but relax pure style rules so that
# `ruff check .` stays green and enforceable for the production packages
# (runtime/, server/, loader/, model/, oracle/).
"benchmarks/*" = ["E501", "E701", "E702", "I001", "F841"]

[tool.setuptools.packages.find]
include = ["benchmarks*", "loader*", "model*", "oracle*", "runtime*", "server*"]
